feat: improve architecture